// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders correctly 1`] = `
<img
  className="css-0"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
/>
`;

exports[`<Image source /> renders correctly 1`] = `
<img
  className="css-0"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  src="abc"
/>
`;
